<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">2048</string>
    <string name="action_settings">Settings</string>
    <string name="press_back_again_to_exit">Press back again to exit</string>
	<string name="toggle_fullscreen">Long click to toggle fullscreen</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="games">Games</string>
    <string name="tips_and_tricks"><![CDATA[Tips & Tricks]]></string>
    <string name="history">History</string>
    <string name="algorithm">Algorithm</string>
    <string name="original">2048 Original</string>
    <string name="undo_2048">2048 Undo</string>
    <string name="two_three_2048">Size 2x3</string>
    <string name="size_5_2048">Size 5x5</string>
    <string name="size_6_20">Size 6x6</string>
    <string name="dont_make_2048">Dont make 2048</string>
    <string name="fibonacci">Fibonnacci</string>
    <string name="finals">Finals</string>
    <string name="zero">Zero</string>
    <string name="sixty_four_k">65536</string>
    <string name="navigation_drawer_title">2048</string>
    <string name="navigation_drawer_subtitle">All variants!</string>
    <string name="history_title">2048</string>
    <string name="history_subtitle">Video Game</string>
    <string name="history_body">2048 is a single-player puzzle game created in March 2014 by 19-year-old Italian web developer Gabriele Cirulli, in which the objective is to slide numbered tiles on a grid to combine them and create a tile with the number 2048. It is a type of sliding block puzzle, and is very similar to the Threes! app released a month earlier. Cirulli created the game in a single weekend as a test to see if he could program a game from scratch, describing it as a clone of Veewo Studios\' app 1024 and getting the idea from Sami Romdhana\'s clone 2048, and was surprised when his game received over 4 million visitors in less than a week, especially since it was just a weekend project. \"It was a way to pass the time\", he said. The game is free to play, Cirulli having said that he was unwilling to make money from \"something that [he] didn’t invent\". He released a free app version of the game for iOS and Android in May 2014. 2048 became a viral hit. The game has been described by the Wall Street Journal as \"almost like Candy Crush for math geeks\", and Business Insider called it \"Threes on steroids\". Due to the popularity of 2048, it is sometimes claimed that Threes! is a clone of it, rather than the other way around. The fact that the game runs on open-source code has led to many additions to the original game, including a score leaderboard and improved touchscreen playability. Spinoffs have been released online, as apps and for the Nintendo 3DS, and include versions with elements from Doge, Doctor Who, Flappy Bird and Tetris; there has also been a 3D version and ones with bigger or smaller grids. Cirulli sees these as \"part of the beauty of open source software\" and does not object to them \"as long as they add new, creative modifications to the game\ (From Wikipedia)"</string>
    <string name="algorithm_title">Algorithm</string>
    <string name="algorithm_introduction_title">Introduction</string>
    <string name="algorithm_introduction_body">A 2048 AI using expectimax optimization, instead of the minimax search. The AI simply performs maximization over all possible moves, followed by expectation over all possible tile spawns (weighted by the probability of the tiles, i.e. 10 percent for a 4 and 90 percent for a 2). It is not possible to prune expectimax optimization (except to remove branches that are exceedingly unlikely), and so the algorithm used is a carefully optimized brute force search.</string>
    <string name="algorithm_performance_title">Performance</string>
    <string name="algorithm_performance_body">The AI in its default configuration (max search depth of 8) takes anywhere from 10ms to 200ms to execute a move, depending on the complexity of the board position. In testing, the AI achieves an average move rate of 5-10 moves per second over the course of an entire game. If the search depth is limited to 6 moves, the AI can easily execute 20+ moves per second, which makes for some interesting watching.  To assess the score performance of the AI, I ran the AI 100 times (connected to the browser game via remote control). The minimum score over all runs was 124024; the maximum score achieved was 794076. The median score is 387222. The AI never failed to obtain the 2048 tile (so it never lost the game even once in 100 games); in fact, it achieved the 8192 tile at least once in every run!</string>
    <string name="algorithm_heuristics_title">Heuristics</string>
    <string name="algorithm_heuristics_body">Several heuristics are used to direct the optimization algorithm towards favorable positions. The precise choice of heuristic has a huge effect on the performance of the algorithm. The various heuristics are weighted and combined into a positional score, which determines how \"good\" a given board position is. The optimization search will then aim to maximize the average score of all possible board positions. The actual score, as shown by the game, is not used to calculate the board score, since it is too heavily weighted in favor of merging tiles (when delayed merging could produce a large benefit).  Initially, used two very simple heuristics, granting \"bonuses\" for open squares and for having large values on the edge. These heuristics performed pretty well, frequently achieving 16384 but never getting to 32768.  The first heuristic was a penalty for having non-monotonic rows and columns which increased as the ranks increased, ensuring that non-monotonic rows of small numbers would not strongly affect the score, but non-monotonic rows of large numbers hurt the score substantially. The second heuristic counted the number of potential merges (adjacent equal values) in addition to open spaces. These two heuristics served to push the algorithm towards monotonic boards (which are easier to merge), and towards board positions with lots of merges (encouraging it to align merges where possible for greater effect).  Furthermore, Petr also optimized the heuristic weights using a \"meta-optimization\" strategy (using an algorithm called CMA-ES), where the weights themselves were adjusted to obtain the highest possible average score.  The effect of these changes are extremely significant. The algorithm went from achieving the 16384 tile around 13 percent of the time to achieving it over 90 percent of the time, and the algorithm began to achieve 32768 over 1/3 of the time (whereas the old heuristics never once produced a 32768 tile).</string>

    <string name="tip_one_title">Keep calm!</string>
    <string name="tip_one_subtitle">Don\'t go berserk and move in haste or make blind moves in order to get that high tile. Try to plan ahead and take your time, watch out from where the next several tiles will emerge and how you will match them up without wasting moves and filling the playing arena. This is the most basic and important thing to keep in mind while trying to beat the game. Calm and patient.</string>
    <string name="tip_two_title">Never press up. Never!</string>
    <string name="tip_two_subtitle">This may be interpreted as never pressing down, or left, or right. Just choose one direction not go and stick to the other three, this way you will make sure that you will not get surrounded by low tiles and not be able to merge them together.</string>
    <string name="tip_three_title">Keep all the high value tiles in one row</string>
    <string name="tip_three_subtitle">For example, if you choose to never press the up button, you will gather all the high value tiles in the bottom row. But sometimes, when you merge them, you may end up with a \'2\' or a \'4\' tile in there. Merge them quick and don\'t let them linger! You must never have a tile lower than \'8\' at the bottom.</string>
    <string name="tip_four_title">The corner is the answer</string>
    <string name="tip_four_subtitle">Keep the highest tile in one corner, for example the bottom right one. Do not move it from there and in order to do this, it means that you must plan your moves carefully in order to fill the bottom row with high value tiles, in descending order starting from the high value one. So you\'ll end up with something like \'128 256 512 1024\'. Then try to do the same thing on the row above the bottom one, but the other way around, with the higle value tile (i.e. \'64\') above the \'128\' one and move to the right with the descending values. It may sound like a struggle, but trust me, it will be a lot easier to beat the game if you do this.</string>
    <string name="tip_five_title">Understand how the board moves</string>
    <string name="tip_five_subtitle">In 2048 you only have 4 main gestures and they are up, down, left, and right. Every time you swipe, every tile on the board moves in that position as far as it possibly can. If multiple cards can combine at once, they will do so. Keep this in mind and understand how moves work before swiping a tile that may or may not end up where you thought it would.</string>
    <string name="tip_six_title">Don\'t chase large tiles</string>
    <string name="tip_six_subtitle">Sometimes it\'s really hard to resist temptation and chase larger numbered tiles across the board in order to combine them. This almost always puts you in a worse position than a better one. Instead, focus on combining smaller tiles and worry less about a specific set of tiles. They\'ll almost always meet up at some point, or you end up making a tile that ends up right next to it.</string>
    <string name="tip_seven_title">Always make moves where multiple tiles merge first</string>
    <string name="tip_seven_subtitle">If you come across an instance where you can merge multiple stacks of cards at once, take it. The more spaces you keep open on the board, the better flexibility you have when bringing in new cards and getting them where you want. With single moves you\'re basically replacing a card you stacked with a new one. When multiple cards can be combined, you\'re only bringing one new card onto the board but you\'re getting rid of more than one. And that\'s always a good thing</string>
    <string name="play_now">Play now!</string>
    <string name="power_up">You have found the Power Up!</string>
    <string name="tip_and_trick">Tips and tricks</string>

</resources>
